konverter til webp

--- a/about.html
+++ b/about.html
@@ -29,7 +29,7 @@
 <header class="menu-bar">
     <div class="logo">
         <a href="index.html">
-            <img src="img/logo.png" alt="Melanie Grath" />
+            <img src="img/logo.webp" alt="Melanie Grath" />
         </a>
     </div>
     <nav class="menu">
@@ -73,7 +73,7 @@
                     to grow, and I’d love
                     to collaborate on exciting projects that bring ideas to life.</p>
             </div>
-            <div class="me"><img src="img/about/about_1.png" alt="me"></div>
+            <div class="me"><img src="img/about/about_1.webp" alt="me"></div>
         </div>
     </div>
 
@@ -89,22 +89,22 @@
         </div>
         <div class="grid_4">
             <div class="skills">
-                <img src="img/about/icon_1.png" alt="icon">
+                <img src="img/about/icon_1.webp" alt="icon">
                 <h2 class="bold">Design</h2>
                 <p>Design is my focus, specializing in creating clear and visually engaging graphics. From logos to
                     illustrations and
                     layouts, I approach each project with creativity and precision.</p>
             </div>
             <div class="skills">
-                <img src="img/about/icon_2.png" alt="icon">
-                <h2 class="bold">Web development</h2>
+                <img src="img/about/icon_2.webp" alt="icon">
+                <h2 class="bold">Web develop&shy;ment</h2>
                 <p>I have experience in web development with HTML, CSS, and JavaScript, combining design and coding to
                     create interactive,
                     user-friendly websites.
                 </p>
             </div>
             <div class="skills">
-                <img src="img/about/icon_3.png" alt="icon">
+                <img src="img/about/icon_3.webp" alt="icon">
                 <h2 class="bold">Language skills</h2>
                 <p>I am fluent in Danish and English, with basic German skills, enabling me to work in international
                     settings and connect
@@ -112,8 +112,8 @@
                 </p>
             </div>
             <div class="skills">
-                <img src="img/about/icon_4.png" alt="icon">
-                <h2 class="bold">Communication</h2>
+                <img src="img/about/icon_4.webp" alt="icon">
+                <h2 class="bold">Communi&shy;cation</h2>
                 <p>I value clear communication and collaboration, ensuring projects align with goals. I thrive in team
                     settings, sharing
                     ideas to deliver creative solutions.</p>
@@ -124,17 +124,17 @@
     <footer>
         <div class="footer_flex">
             <a class="icon" href="https://www.linkedin.com/in/melanie-grath-814ba3324/" target="_blank">
-                <img src="img/footer/icon_1.png" alt="icon linked in">
+                <img src="img/footer/icon_1.webp" alt="icon linked in">
             </a>
             <a class="icon" href="https://www.instagram.com/melanie_grath?igsh=cnAzOXZ5aDZkaDRw&utm_source=qr"
                 target="_blank">
-                <img src="img/footer/icon_2.png" alt="icon instagram">
+                <img src="img/footer/icon_2.webp" alt="icon instagram">
             </a>
             <a class="icon" href="https://www.facebook.com/melanie.grath.1" target="_blank">
-                <img src="img/footer/icon_3.png" alt="icon facebook">
+                <img src="img/footer/icon_3.webp" alt="icon facebook">
             </a>
             <a class="icon" href="mailto:your_email@example.com">
-                <img src="img/footer/icon_4.png" alt="icon mail">
+                <img src="img/footer/icon_4.webp" alt="icon mail">
             </a>
         </div>
     </footer>
