--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <header class="menu-bar">
         <div class="logo">
             <a href="index.html">
-                <img src="img/logo.png" alt="Melanie Grath" />
+                <img src="img/logo.webp" alt="Melanie Grath" />
             </a>
         </div>
         <nav class="menu">
@@ -75,13 +75,13 @@
                     love to hear from you!</p>
                 <a class="button" href="mailto:your_email@example.com">Contact me</a>
             </div>
-            <div class="order"><img src="img/index/map.png" alt="map with pin"></div>
-            <div><img src="img/index/me.png" alt="picture of me"></div>
+            <div class="order"><img src="img/index/map.webp" alt="map with pin"></div>
+            <div><img src="img/index/me.webp" alt="picture of me"></div>
 
         </div>
 
         <div class="green_background">
-            <div class="first_semester">
+            <div class="first_semester intro_text">
                 <h2>First semester</h2>
                 <p>Here you’ll find a collection of my work from the first semester, divided into the four main courses:
                     fundamental web,
@@ -92,16 +92,16 @@
             </div>
             <div class="grid_4">
                 <a class="zoom" href="web.html">
-                    <div><img src="img/index/box_1.png" alt="boks"></div>
+                    <div><img src="img/index/box_1.webp" alt="boks"></div>
                 </a>
                 <a class="zoom" href="ux.html">
-                    <div><img src="img/index/box_2.png" alt="boks"></div>
+                    <div><img src="img/index/box_2.webp" alt="boks"></div>
                 </a>
                 <a class="zoom" href="animation.html">
-                    <div><img src="img/index/box_3.png" alt="boks"></div>
+                    <div><img src="img/index/box_3.webp" alt="boks"></div>
                 </a>
                 <a class="zoom" href="content.html">
-                    <div><img src="img/index/box_4.png" alt="boks"></div>
+                    <div><img src="img/index/box_4.webp" alt="boks"></div>
                 </a>
             </div>
 
@@ -110,17 +110,17 @@
     <footer>
         <div class="footer_flex">
             <a class="icon" href="https://www.linkedin.com/in/melanie-grath-814ba3324/" target="_blank">
-                <img src="img/footer/icon_1.png" alt="icon linked in">
+                <img src="img/footer/icon_1.webp" alt="icon linked in">
             </a>
             <a class="icon" href="https://www.instagram.com/melanie_grath?igsh=cnAzOXZ5aDZkaDRw&utm_source=qr"
                 target="_blank">
-                <img src="img/footer/icon_2.png" alt="icon instagram">
+                <img src="img/footer/icon_2.webp" alt="icon instagram">
             </a>
             <a class="icon" href="https://www.facebook.com/melanie.grath.1" target="_blank">
-                <img src="img/footer/icon_3.png" alt="icon facebook">
+                <img src="img/footer/icon_3.webp" alt="icon facebook">
             </a>
             <a class="icon" href="mailto:your_email@example.com">
-                <img src="img/footer/icon_4.png" alt="icon mail">
+                <img src="img/footer/icon_4.webp" alt="icon mail">
             </a>
         </div>
     </footer>
