--- a/ux.html
+++ b/ux.html
@@ -30,7 +30,7 @@
 <header class="menu-bar">
     <div class="logo">
         <a href="index.html">
-            <img src="img/logo.png" alt="Melanie Grath" />
+            <img src="img/logo.webp" alt="Melanie Grath" />
         </a>
     </div>
     <nav class="menu">
@@ -72,10 +72,10 @@
     <div class="green_background">
         <div class="grid_1-1">
             <div class="grid_2-1">
-                <div><img src="img/ux/ux_1.png" alt="protoype"></div>
-                <div><img src="img/ux/ux_2.png" alt="moodboard"></div>
-                <div><img src="img/ux/ux_3.png" alt="mindmap"></div>
-                <div><img src="img/ux/ux_4.png" alt="styletile"></div>
+                <div><img src="img/ux/ux_1.webp" alt="protoype"></div>
+                <div><img src="img/ux/ux_2.webp" alt="moodboard"></div>
+                <div><img src="img/ux/ux_3.webp" alt="mindmap"></div>
+                <div><img src="img/ux/ux_4.webp" alt="styletile"></div>
 
             </div>
             <div class="project">
@@ -96,17 +96,17 @@
     <footer>
         <div class="footer_flex">
             <a class="icon" href="https://www.linkedin.com/in/melanie-grath-814ba3324/" target="_blank">
-                <img src="img/footer/icon_1.png" alt="icon linked in">
+                <img src="img/footer/icon_1.webp" alt="icon linked in">
             </a>
             <a class="icon" href="https://www.instagram.com/melanie_grath?igsh=cnAzOXZ5aDZkaDRw&utm_source=qr"
                 target="_blank">
-                <img src="img/footer/icon_2.png" alt="icon instagram">
+                <img src="img/footer/icon_2.webp" alt="icon instagram">
             </a>
             <a class="icon" href="https://www.facebook.com/melanie.grath.1" target="_blank">
-                <img src="img/footer/icon_3.png" alt="icon facebook">
+                <img src="img/footer/icon_3.webp" alt="icon facebook">
             </a>
             <a class="icon" href="mailto:your_email@example.com">
-                <img src="img/footer/icon_4.png" alt="icon mail">
+                <img src="img/footer/icon_4.webp" alt="icon mail">
             </a>
         </div>
     </footer>
